# riscv_fuzz_test

./: .gitignore  Cargo.toml  readme.md
emulators/: readme.md
src/: error.rs  lib.rs  main.rs  utils.rs
src/consts/: linker_script.rs  mod.rs  rocket.rs
src/elf/: build.rs  mod.rs  template.rs  tracer.rs
src/emulators/: mod.rs  rocket.rs  spike.rs
src/output_diff/: analysis.rs  mod.rs  utils.rs
src/output_diff/analysis/: remove_rocket_illegal_inst.rs  shortten_asm_for_regs.rs
src/output_diff/diff/: common_diff.rs  debug_diff.rs  mod.rs  standard_diff.rs
src/output_diff/diff_diff/: common_diff_diff.rs  debug_diff_diff.rs  mod.rs  standard_diff_diff.rs
src/output_parser/: common.rs  debug.rs  mod.rs  standard.rs  util.rs
src/random_asm/: asm_maker.rs  inst_generator.rs  mod.rs
temp/: test.S
