[package]
name = "riscv_fuzz_test"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
log = "0.4.27"
env_logger = "0.11.8"
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
riscv-instruction = {path = "/home/canxin/git/riscv-instruction-crates/riscv-instruction"}
enum-iterator = "2.1.0"
clap = { version = "4.5.40", features = ["derive"] }
regex = "1.10"
serde_json = "1.0.140"
chrono = "0.4.41"
thiserror = "2.0.12"
rayon = "1.8"
num_cpus = "1.16"
